# Project metadata (see https://peps.python.org/pep-0621)
[project]
name = "fractal-helper-tasks"
version = "0.1.0"
description = "Collection of Fractal helper tasks"
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Joel Luethi", email = "joel.luethi@uzh.ch" },
]

# Required Python version and dependencies
requires-python = ">=3.9"
dependencies = [
    "fractal-tasks-core==1.0.0"
]

# Optional dependencies (e.g. for `pip install -e ".[dev]"`, see
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies)
[project.optional-dependencies]
dev = ["devtools", "pytest", "requests", "build", "jsonschema", "pooch"]
test = ["pytest", "pytest-cov"]

# Build options (see https://peps.python.org/pep-0517)
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fractal_helper_tasks"]

# Always include the __FRACTAL_MANIFEST__.json file in the package
[tool.setuptools.package-data]
"*" = ["__FRACTAL_MANIFEST__.json"]

# https://docs.astral.sh/ruff
[tool.ruff]
line-length = 88
target-version = "py38"
src = ["src"]
# https://docs.astral.sh/ruff/rules
select = [
    "E",    # style errors
    "W",    # style warnings
    "F",    # flakes
    "D",    # pydocstyle
    "I",    # isort
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
    "TCH",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
]

[tool.ruff.lint]
pydocstyle = { convention = "numpy" }
extend-select = [
    "D417", # Missing argument descriptions in Docstrings
]
extend-ignore = [
    "D401", # First line should be in imperative mood (remove to opt in)
    "C408", # Unnecessary `dict` call
]

[tool.ruff.per-file-ignores]
"tests/*.py" = ["D", "S"]
"setup.py" = ["D"]

[tool.coverage.run]
# Include only the specific package directories for coverage, exclude tests
include = [
    "src/fractal_helper_tasks/*"
]
omit = [
    "*/tests/*",
    "*_test.py",
    "setup.py"
]